Добавление абстрактной фабрики
Example:
- Добавлен контроллер для фабрики;
- добавлена регистрация сервисов фабрики в Program.cs.

gof:
- Добавлена абстрактная и конкретная фабрика виджетов;
- добавлены дто для моделей motif и pm;
- добавлены расширения для di, с регистрацией сервисов фабрики и
настройкой mapster;
- добавлены конкретные фабрики motif и pm;
- добавлены модели;
- добавлен сервис виджетов.

--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -19,5 +19,8 @@
     <ItemGroup>
       <None Include="wwwroot\swagger-ui\SwaggerDark.css" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\gof\gof.csproj" />
+    </ItemGroup>
 
 </Project>
