--- a/src/gof/gof.csproj
+++ b/src/gof/gof.csproj
@@ -8,8 +8,12 @@
 
     <ItemGroup>
       <Folder Include="Behavioral\" />
-      <Folder Include="Creational\" />
       <Folder Include="Structural\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.3.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
