--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: Build and test
 
 on:
@@ -10,8 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+
+  build-windows:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -28,8 +26,25 @@ jobs:
       run: dotnet build --no-restore
       working-directory: ./src
 
-  test:
-      
+  build-ubuntu:
+    runs-on: ubuntu-latest
+  
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+  
+    - name: Restore dependencies
+      run: dotnet restore
+      working-directory: ./src
+  
+    - name: Build
+      run: dotnet build --no-restore
+      working-directory: ./src
+
+  test-ubuntu:
     runs-on: ubuntu-latest
     
     steps:
@@ -41,8 +56,8 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./src
+      working-directory: ./src/Tests
 
     - name: Test
       run: dotnet test --no-restore
-      working-directory: ./src
+      working-directory: ./src/Tests
