--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -25,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Example\Example.csproj" />
       <ProjectReference Include="..\gof\gof.csproj" />
     </ItemGroup>
 
