--- a/src/Example/appsettings.json
+++ b/src/Example/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IsUseSwagger": true,
+  "IsDevelopment": true,
+  "ServiceName": "gof"
 }
