--- a/src/Example/appsettings.Development.json
+++ b/src/Example/appsettings.Development.json
@@ -1,8 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt"
+        }
+      }
+    ]
+  },
+  "AllowedHosts": "*",
+  "IsUseSwagger": true,
+  "IsDevelopment": true,
+  "ServiceName": "gof"
 }
