--- a/src/Example/appsettings.json
+++ b/src/Example/appsettings.json
@@ -1,9 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "IsUseSwagger": true,
