Добавление паттерна Строитель
Program:
 - добавлено подключение классов строителей.

Добавлено:
- контроллер для взаимодействия со строителями
BuilderController;
- класс игры лабиринт для использования строителей;
- абстракция строителя лабиринта;
- считающий строитель;
- стандартный строитель;
- ДТО подсчетов;
- ДТО лабиринта;
- расширения di для подключения строителей;
- модель лабиринта;
- описание паттерна.

--- a/src/gof/gof.csproj
+++ b/src/gof/gof.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <Folder Include="Behavioral\" />
+      <Folder Include="Creational\Builder\img\" />
       <Folder Include="Structural\" />
     </ItemGroup>
 
